Add configurable messages, upload summary and full config template
- All server announcements configurable via msg* fields with
  {reason}/{filename}/{error}/{summary} placeholders
- Upload completion now reports size, elapsed time and speed
  (e.g. '4.68 MB in 4.8s (997 KB/s)')
- Config file is written in full on startup and /backup reload,
  new fields merge automatically with defaults on upgrade